# unnamed-budget-app

./: .env.example  .gitignore  .prettierrc  CLAUDE.md  Makefile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
.githooks/: pre-commit
.github/: pull_request_template.md
backend/: alembic.ini  pyproject.toml  ruff.toml
backend/migrations/: env.py
backend/migrations/versions/: 107aa33142ac_create_transactions_table.py  11818996ad35_.py  1658610f7cbb_test.py  3cb043dc13f7_add_transactions_table.py  4a3b02a1ff27_add_budget_item_id_to_transactions_.py  670e47e1d683_create_budgets_table.py  83a6679daa53_tables_transaction_budgets_budget_items_.py  87397ef2a8a1_budget_items_and_budget_groups.py  88e361718f8c_.py  919e2fa9d548_.py  cef766b4b200_update_budget_items_foreign_key_rule_.py  dbdec0ffafac_.py  ecf49ee7a9eb_.py
backend/scripts/: seed.py
backend/scripts/seed_data/: envelopes.py  transactions.py
backend/src/: config.py  database.py  main.py
backend/src/bank_accounts/: models.py
backend/src/budgets/: __init__.py  models.py  router.py  utils.py
backend/src/budgets/groups/: models.py  router.py
backend/src/budgets/items/: models.py  router.py
backend/src/transactions/: dumbData.py  models.py  router.py
frontend/: next.config.ts
frontend/src/lib/: dateHelpers.ts  (+1 more)
src from Figma/app/: App.tsx
src/components/: TransactionsView.tsx
src/constants/: index.ts  routes.ts  views.ts
src/lib/: budgetMonthStateHelpers.ts  dateHelpers.ts  urlValidation.ts
src/pages/: budget.route.tsx  budget.tsx  index.tsx
(+57 files in other folders)
